minor style changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- 
       **   *******    ******** **      ** **     **     **    
      /**  **/////**  **////// /**     /**/**    /**    ****   
      /** **     //**/**       /**     /**/**    /**   **//**  
@@ -7,18 +7,28 @@
      /**/**      /**////////**/**//////**/**    /** **********
  **  /**//**     **        /**/**     /**/**    /**/**//////**
 //*****  //*******   ******** /**     /**//******* /**     /**
- /////    ///////   ////////  //      //  ///////  //      // 
+ /////    ///////   ////////  //      //  ///////  //      //  -->
 
 <head>
 	<meta charset="utf-8">
-	<title>Joshua Raison @ GitHub</title>
+	<title>Joshua Raison | Landing</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div>
-		<img src="image/dp.png">
-		<h1>Joshua Raison @ GitHub</h1>
-		<span>Page Under Construction!</span>
-	</div>
+	<header class="title">
+		<div class="brand">
+			<img class="brand-avatar" src="image/dp.png" alt="brand-avatar">
+			<h1 class="brand-name">Joshua</h1>
+		</div>
+		<!-- <nav class="navigation">
+			
+		</nav> -->
+	</header>
+	<main class="container">
+		<section>
+			<span class="temp-text">Page Will Be Back Soon!</span>
+		</section>
+	</main>
+	
 </body>
 </html>
