--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      /**/**      /**////////**/**//////**/**    /** **********
  **  /**//**     **        /**/**     /**/**    /**/**//////**
 //*****  //*******   ******** /**     /**//******* /**     /**
- -->
+ /////    ///////   ////////  //      //  ///////  //      //  -->
+
 <head>
 	<meta charset="utf-8">
 	<title>Joshua Raison | Landing</title>
@@ -19,9 +20,11 @@
 			<img class="brand-avatar" src="image/dp.png" alt="brand-avatar">
 			<h1 class="brand-name">Joshua</h1>
 		</div>
-		<!-- <nav class="navigation">
-			
-		</nav> -->
+		<nav class="navigation">			
+			<a class="nav-item">Home</a>
+			<a class="nav-item">About</a>
+			<a class="nav-item">Contact</a>
+		</nav>
 	</header>
 	<main class="container">
 		<section>
