index.html commented code - underworking

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<img class="brand-avatar" src="image/dp.png" alt="brand-avatar">
 			<h1 class="brand-name">Joshua</h1>
 		</div>
-		<nav class="navigation">			
+		<!-- <nav class="navigation">			
 			<a class="nav-item">Home</a>
 			<a class="nav-item">About</a>
 			<a class="nav-item">Contact</a>
-		</nav>
+		</nav> -->
 	</header>
 	<main class="container">
 		<section>
